# frontend/src/api/openapi.json
@@ -1471,12 +1471,17 @@
           "label": {
             "type": "string",
             "title": "Label"
+          },
+          "contract": {
+            "type": "string",
+            "title": "Contract"
           }
         },
         "type": "object",
         "required": [
           "format",
-          "label"
+          "label",
+          "contract"
         ],
         "title": "ExportFormatInfo"
       },
